--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   place-items: center;
 }
 main {
-  background: url(images/background.png);
+  background: url(images/backgroundm.svg);
   width: 375px;
   height: 812px;
   text-align: center;
