--- a/style.css
+++ b/style.css
@@ -14,18 +14,18 @@ body {
   place-items: center;
 }
 main {
-  background: url(images/background.png);
-  width: 375px;
-  height: 812px;
-  text-align: center;
-  background-size: cover;
-  color: var(--gray);
+  background: url(images/background.png) no-repeat center/cover;
+  width: 100vw;
+  min-height: 812px;
+  height: 10vh;
 }
 .container {
   max-width: 250px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  
+  color: var(--gray)
 }
 .avatar {
   width: 10rem;
