--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   place-items: center;
 }
 main {
-  background: url(images/background.svg) no-repeat center/cover;
+  background: url(images/background.png) no-repeat center/cover;
   width: 100vw;
   min-height: 812px;
   height: 10vh;
